--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>Resume</title>
-</head>
- <p> I am Playboy</p>
- 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Веб студія.Ефективні рішення для вашого бізнесу</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="">WebStudio</a></li>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <a href="mail to:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+380961111111">+380961111111</a>
+    </header>
+    <main>
+      <section>
+        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <button type="button">Заказати послугу</button>
+      </section>
+      <div>
+        <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+        <p>
+          Ідейні міркування, і навіть початок повсякденної роботи з формування
+          позиції.
+        </p>
+      </div>
+      <div>
+        <h2>ПУНКТУАЛЬНІСТЬ</h2>
+        <p></p>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
+</html>
