--- a/index.html
+++ b/index.html
@@ -24,10 +24,46 @@
         <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
         <button type="button">Заказати послугу</button>
       </section>
-      se
-
-      
+      <section>
+            <h2>УВАГА ДО ДЕТАЛЕЙ</h2> 
+        <ul> 
+            <li> 
+               <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
+            </li>            
+            <li> <h2>ПУНКТУАЛЬНІСТЬ </h2> 
+                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе. </p>
+            </li>            
+            <li> <h2>ПЛАНУВАННЯ</h2>  
+                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>            
+            <li>  <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2> 
+                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>            
+        </ul>                            
+      </section>
+      <section>        
+            <h2>ЧИМ МИ ЗАЙМАЄМОСЬ</h2>
+        <ul>
+            <li><img src="./images/box1.jpg" alt="ЛЕПТОП" width="370" height="294"></li>
+            <li><img src="./images/box2.jpg" alt="СМАРТФОН" width="370" height="294"></li>
+            <li><img src="./images/box3.jpg" alt="ПЛАНШЕТ" width="370" height="294"></li>
+        </ul>
+      </section>
+      <section>
+        <h2>НАША КОМАНДА</h2>
+        <ul>
+            <li><img src="./images/teamcard1.jpg" alt="Дизайнер продукту" width="270" height="368"></li>
+            <li><img src="./images/teamcard2.jpg" alt="Розробник інтерфейсу" width="270" height="368"></li>
+            <li><img src="./images/teamcard3.jpg" alt="Маркетолог" width="270" height="368"></li>
+            <li><img src="./images/teamcard4.jpg" alt="Дизайнер інтерфейсу користувача" width="270" height="368"></li>
+        </ul>
+      </section>      
     </main>
-    <footer></footer>
+    <footer>
+        <a href="">WebStudio</a>
+        <address>м. Київ, пр-т Лесі Українки, 26</address>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+380991111111">+380961111111</a>
+    </footer>
   </body>
 </html>
