--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <button type="button">Заказати послугу</button>
       </section>
       <section>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2> 
+             
         <ul> 
-            <li> 
+            <li> <h2>УВАГА ДО ДЕТАЛЕЙ </h2>
                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
             </li>            
             <li> <h2>ПУНКТУАЛЬНІСТЬ </h2> 
