--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
       <section>        
             <h2>ЧИМ МИ ЗАЙМАЄМОСЬ</h2>
         <ul>
-            <li><img src="./images/box1.jpg" alt="ЛЕПТОП" width="370" height="294"></li>
-            <li><img src="./images/box2.jpg" alt="СМАРТФОН" width="370" height="294"></li>
-            <li><img src="./images/box3.jpg" alt="ПЛАНШЕТ" width="370" height="294"></li>
+            <li><img src="./images01/box1.jpg" alt="ЛЕПТОП" width="370" ></li>
+            <li><img src="./images01/box2.jpg" alt="СМАРТФОН" width="370" ></li>
+            <li><img src="./images01/box1.jpg" alt="ПЛАНШЕТ" width="370" ></li>
         </ul>
       </section>
       <section>
         <h2>НАША КОМАНДА</h2>
         <ul>
-            <li><img src="./images/teamcard1.jpg" alt="Дизайнер продукту" width="270" height="368"></li>
-            <li><img src="./images/teamcard2.jpg" alt="Розробник інтерфейсу" width="270" height="368"></li>
-            <li><img src="./images/teamcard3.jpg" alt="Маркетолог" width="270" height="368"></li>
-            <li><img src="./images/teamcard4.jpg" alt="Дизайнер інтерфейсу користувача" width="270" height="368"></li>
+            <li><img src="./images01/img1.jpg" alt="Дизайнер продукту" width="270"></li>
+            <li><img src="./images01/img2.jpg" alt="Розробник інтерфейсу" width="270"></li>
+            <li><img src="./images01/img3.jpg" alt="Маркетолог" width="270"></li>
+            <li><img src="./images01/img4.jpg" alt="Дизайнер інтерфейсу користувача" width="270"></li>
         </ul>
       </section>      
     </main>
