--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <header>
       <nav>
-        <ul>
-          <li><a href="">WebStudio</a></li>
+        <a href="/index.html">WebStudio</a>
+        <ul>           
           <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="/portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
@@ -21,49 +21,62 @@
     </header>
     <main>
       <section>
-        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <h2>Ефективні рішення <br> Для Вашого Бізнесу</h2>
         <button type="button">Заказати послугу</button>
       </section>
       <section>
              
         <ul> 
-            <li> <h2>УВАГА ДО ДЕТАЛЕЙ </h2>
+            <li> <h3>Увага до деталей </h3>
                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
             </li>            
-            <li> <h2>ПУНКТУАЛЬНІСТЬ </h2> 
+            <li> <h3>Пунктуальність </h3> 
                 <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе. </p>
             </li>            
-            <li> <h2>ПЛАНУВАННЯ</h2>  
+            <li> <h3>Планування</h3>  
                 <p>Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>            
-            <li>  <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2> 
+            <li>  <h3>Сучасні технології</h3> 
                 <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>            
         </ul>                            
       </section>
       <section>        
-            <h2>ЧИМ МИ ЗАЙМАЄМОСЬ</h2>
+            <h2>Чим ми займаємось</h2>
         <ul>
-            <li><img src="./images01/box1.jpg" alt="ЛЕПТОП" width="370" ></li>
-            <li><img src="./images01/box2.jpg" alt="СМАРТФОН" width="370" ></li>
-            <li><img src="./images01/box1.jpg" alt="ПЛАНШЕТ" width="370" ></li>
+            <li><img src="./images/box1.jpg" alt="Лептоп" width="370" ></li>
+            <li><img src="./images/box2.jpg" alt="Смартфон" width="370"></li>
+            <li><img src="./images/box3.jpg" alt="Планшет" width="370"></li>
         </ul>
       </section>
       <section>
-        <h2>НАША КОМАНДА</h2>
+        <h2>Наша команда</h2>
         <ul>
-            <li><img src="./images01/img1.jpg" alt="Дизайнер продукту" width="270"></li>
-            <li><img src="./images01/img2.jpg" alt="Розробник інтерфейсу" width="270"></li>
-            <li><img src="./images01/img3.jpg" alt="Маркетолог" width="270"></li>
-            <li><img src="./images01/img4.jpg" alt="Дизайнер інтерфейсу користувача" width="270"></li>
+            <li><img src="./images/img01.jpg" alt="Product Designer" width="270">
+            <h3>Ігор Дем`яненко</h3>
+            <P>Product Designer</P>
+           </li>
+            <li><img src="./images/img02.jpg" alt="Frontend Developer" width="270">
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>           
+            </li>
+            <li><img src="./images/img03.jpg" alt="Marketing" width="270" >
+              <h3>Микола Тарасов</h3>
+              <p>Marketing</p>             
+            </li>
+            <li><img src="./images/img04.jpg" alt="UI Designer" width="270">
+              <h3>Михайло Єрмаков</h3>
+              <p>UI Designer</p>                
+            </li>
         </ul>
       </section>      
     </main>
     <footer>
-        <a href="">WebStudio</a>
-        <address>м. Київ, пр-т Лесі Українки, 26</address>
+        <a href="/index.html">WebStudio</a>
+      <address> <p> м. Київ, пр-т Лесі Українки, 26</p>
         <a href="mailto:info@example.com">info@example.com</a>
         <a href="tel:+380991111111">+380961111111</a>
+      </address>
     </footer>
   </body>
 </html>
