--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     </main>
     <footer>
         <a href="/index.html">WebStudio</a>
-      <address> <p> м. Київ, пр-т Лесі Українки, 26</p>
+      <address> 
+        <p> м. Київ, пр-т Лесі Українки, 26</p>
         <a href="mailto:info@example.com">info@example.com</a>
         <a href="tel:+380991111111">+380961111111</a>
       </address>
