--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
       <section>
-        <h2>Ефективні рішення <br> Для Вашого Бізнесу</h2>
+        <h1>Ефективні рішення <br> Для Вашого Бізнесу</h1>
         <button type="button">Заказати послугу</button>
       </section>
       <section>
@@ -44,27 +44,27 @@
       <section>        
             <h2>Чим ми займаємось</h2>
         <ul>
-            <li><img src="./images/box1.jpg" alt="Лептоп" width="370" ></li>
-            <li><img src="./images/box2.jpg" alt="Смартфон" width="370"></li>
-            <li><img src="./images/box3.jpg" alt="Планшет" width="370"></li>
+            <li><img src="./images01/box1.jpg" alt="Лептоп" width="370" ></li>
+            <li><img src="./images01/box2.jpg" alt="Смартфон" width="370"></li>
+            <li><img src="./images01/box3.jpg" alt="Планшет" width="370"></li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
-            <li><img src="./images/img01.jpg" alt="Product Designer" width="270">
+            <li><img src="./images01/img1.jpg" alt="Product Designer" width="270">
             <h3>Ігор Дем`яненко</h3>
-            <P>Product Designer</P>
+            <p>Product Designer</p>
            </li>
-            <li><img src="./images/img02.jpg" alt="Frontend Developer" width="270">
+            <li><img src="./images01/img2.jpg" alt="Frontend Developer" width="270">
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>           
             </li>
-            <li><img src="./images/img03.jpg" alt="Marketing" width="270" >
+            <li><img src="./images01/img3.jpg" alt="Marketing" width="270" >
               <h3>Микола Тарасов</h3>
               <p>Marketing</p>             
             </li>
-            <li><img src="./images/img04.jpg" alt="UI Designer" width="270">
+            <li><img src="./images01/img4.jpg" alt="UI Designer" width="270">
               <h3>Михайло Єрмаков</h3>
               <p>UI Designer</p>                
             </li>
